fixed overflow issue for ipad mini

--- a/src/scss/_scaffold.scss
+++ b/src/scss/_scaffold.scss
@@ -273,6 +273,7 @@
             @include responsive(medium-tablet) {
                 max-height: 9.6875em;
                 line-height: 0;
+                overflow: hidden;
             }
         }
     }
